[gd_scene load_steps=6 format=2]

[ext_resource path="res://Camera/CameraHitBox.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 8, 88 )

[sub_resource type="RectangleShape2D" id=51]
extents = Vector2( 8, 88 )

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 160, 8 )

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 160, 10 )

[node name="Camera2D" type="Camera2D"]
visible = false
offset = Vector2( 160, 90 )
current = true
script = ExtResource( 1 )

[node name="PassageEast" type="Node2D" parent="."]
position = Vector2( 336, 88 )
__meta__ = {
"_edit_group_": true
}

[node name="AreaEast" type="Area2D" parent="PassageEast"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PassageEast/AreaEast"]
shape = SubResource( 50 )

[node name="PassageWest" type="Node2D" parent="."]
position = Vector2( -16, 88 )
__meta__ = {
"_edit_group_": true
}

[node name="AreaWest" type="Area2D" parent="PassageWest"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PassageWest/AreaWest"]
shape = SubResource( 51 )

[node name="PassageSouth" type="Node2D" parent="."]
position = Vector2( 160, -16 )
__meta__ = {
"_edit_group_": true
}

[node name="AreaNorth" type="Area2D" parent="PassageSouth"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PassageSouth/AreaNorth"]
shape = SubResource( 52 )

[node name="PassageNorth" type="Node2D" parent="."]
position = Vector2( 160, 200 )
__meta__ = {
"_edit_group_": true
}

[node name="AreaSouth" type="Area2D" parent="PassageNorth"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PassageNorth/AreaSouth"]
shape = SubResource( 53 )

[connection signal="body_entered" from="PassageEast/AreaEast" to="." method="_on_AreaEast_body_entered"]
[connection signal="body_entered" from="PassageWest/AreaWest" to="." method="_on_AreaWest_body_entered"]
[connection signal="body_entered" from="PassageSouth/AreaNorth" to="." method="_on_AreaNorth_body_entered"]
[connection signal="body_entered" from="PassageNorth/AreaSouth" to="." method="_on_AreaSouth_body_entered"]
